--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Ungplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,6 +23,44 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+          <ul>
+            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="about/index.html" target="_blank">About</a></li>
+          </ul>
+      </nav>
+    </div>
+</header>
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h3>Contact</h3>
+        <address>
+          <p>555-555-5555</p>
+          <p>hello@unplugged.com</p>
+        </address>
+      </div>
+      <div class="social">
+        <div class="social-icons">
+          <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+      <!-- other social links here -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>Copyright 2019</p>
+    <p>Unplugged</p>
+  </div>
+</footer>
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
