Added Flexbox styles

--- a/about/index.html
+++ b/about/index.html
@@ -35,6 +35,8 @@
   </div>
 </header>
 
+ <!--Main section starts-->
+
 <main> 
 
   <section class="mission">
@@ -77,6 +79,8 @@
   </section>
 
 </main>
+
+ <!--Main section ends-->
 
 <footer>
   <div class="content-wrapper">
