--- a/faq/index.html
+++ b/faq/index.html
@@ -35,6 +35,8 @@
   </div>
 </header>
 
+ <!--Main section starts-->
+
 <main class="faq">
     <div class="content-wrapper">
       <h2>Frequently Asked Questions</h2>
@@ -56,6 +58,8 @@
       </div>
     </div>
 </main>
+
+ <!--Main section ends-->
 
 <footer>
   <div class="content-wrapper">
