--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </div>
 </header>
 
+<!--Main section starts-->
+
 <main>
 
     <section class="hero-area">
@@ -105,6 +107,8 @@
     </section>
 
 </main>
+
+<!--Main section ends-->
 
 <footer>
     <div class="content-wrapper">
