Added font styles, sizes, and background colors

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h4>Contact</h4>
           <address>
             <p>555-555-5555 <br>
-              @unplugged.com</p>
+            hello@unplugged.com</p>
           </address>
         </div>
         <div class="social">
