--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <!-- Add your site or application content here -->
 <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
           <ul>
@@ -102,6 +104,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
+          <figure>
+            <img src='img/reviews.jpg' alt="A group of people at the Unplugged Retreat">
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. <br> October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
