--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
 
   <section class="map">
     <figure>
-      <!--MAP-->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24180.19636048547!2d-74.00143333663593!3d40.7504863769583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25901a4127ca9%3A0xbecdcc9081d6cfdb!2sMidtown%20Manhattan%2C%20New%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1661200398025!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>
     </figure>
   </section>
 
