--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook-f"></i></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a><i class="fab fa-twitter"></i></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a><i class="fab fa-instagram"></i></p>
+            <p><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></p></a>
+            <p><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></p></a>
+            <p><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></p></a>
         <!-- other social links here -->
           </div>
         </div>
