Made Skillcrush instructor changes

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
 <body>
 
   <!-- Add your site or application content here -->
-<header>
+  <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="index.html">
           <img src="img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
       <div class="header-divider"></div>
       <nav>
-          <ul>
-            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
-          </ul>
+        <ul>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
+        </ul>
       </nav>
     </div>
-</header>
+  </header>
 
-<!--Main section starts-->
+  <!--Main section starts-->
 
-<main>
+  <main>
 
     <section class="hero-area">
       <div class="content-wrapper">
@@ -80,19 +80,23 @@
           </article>
           <article>
             <p class="fontawesome-icon"><i class="fa-solid fa-bed"></i></p>
-            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout rooms.</p>
           </article>
           <article>
             <p class="fontawesome-icon"><i class="fa-solid fa-utensils"></i></p>
-            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
           </article>
           <article>
             <p class="fontawesome-icon"><i class="fa-solid fa-shoe-prints"></i></p>
-            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
+              bungalow.</p>
           </article>
           <article>
             <p class="fontawesome-icon"><i class="fa-solid fa-face-smile"></i></p>
-            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
+              a chance to reset.</p>
           </article>
           <article>
             <p class="fontawesome-icon"><i class="fa-solid fa-wifi"></i></p>
@@ -111,24 +115,27 @@
           </figure>
           <div>
             <h3>LaCrue Bottling Co. <br> October 2017</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. </p>
           </div>
         </article>
       </div>
     </section>
 
-</main>
+  </main>
 
-<!--Main section ends-->
+  <!--Main section ends-->
 
-<footer>
+  <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
             <p>555-555-5555 <br>
-            hello@unplugged.com</p>
+              hello@unplugged.com</p>
           </address>
         </div>
         <div class="social">
@@ -137,7 +144,7 @@
             <p><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></p></a>
             <p><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></p></a>
             <p><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></p></a>
-        <!-- other social links here -->
+            <!-- other social links here -->
           </div>
         </div>
       </div>
@@ -145,7 +152,7 @@
     <div class="copyright">
       <p>Copyright 2019 | Unplugged</p>
     </div>
-</footer>
+  </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
