--- a/about/index.html
+++ b/about/index.html
@@ -29,37 +29,44 @@
 <header>
   <div class="content-wrapper">
     <figure>
-      <a href="#">
+      <a href="../index.html">
         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
       </a>
     </figure>
     <div class="header-divider"></div>
     <nav>
-        <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
-        </ul>
+      <ul>
+        <li><a href="../faq/index.html">FAQ</a></li>
+        <li><a href="../about/index.html">About</a></li>
+      </ul>
     </nav>
   </div>
 </header>
 
- <!--Main section starts-->
+<!--Main section starts-->
 
-<main> 
+<main>
 
   <section class="mission">
     <div class="content-wrapper">
       <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
       <div class="mission-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+          facilisis.</p>
       </div>
     </div>
   </section>
 
   <section class="map">
     <figure>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24180.19636048547!2d-74.00143333663593!3d40.7504863769583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25901a4127ca9%3A0xbecdcc9081d6cfdb!2sMidtown%20Manhattan%2C%20New%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1661200398025!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24180.19636048547!2d-74.00143333663593!3d40.7504863769583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25901a4127ca9%3A0xbecdcc9081d6cfdb!2sMidtown%20Manhattan%2C%20New%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1661200398025!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>
     </figure>
   </section>
 
@@ -88,7 +95,7 @@
 
 </main>
 
- <!--Main section ends-->
+<!--Main section ends-->
 
 <footer>
   <div class="content-wrapper">
@@ -106,7 +113,7 @@
           <p><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></p></a>
           <p><a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></p></a>
           <p><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></p></a>
-      <!-- other social links here -->
+          <!-- other social links here -->
         </div>
       </div>
     </div>
@@ -116,17 +123,17 @@
   </div>
 </footer>
 
-  <!-- Add your site or application content here -->
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+<!-- Add your site or application content here -->
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
