--- a/faq/index.html
+++ b/faq/index.html
@@ -29,45 +29,49 @@
 <header>
   <div class="content-wrapper">
     <figure>
-      <a href="#">
+      <a href="../index.html">
         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
       </a>
     </figure>
     <div class="header-divider"></div>
     <nav>
-        <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
-        </ul>
+      <ul>
+        <li><a href="../faq/index.html">FAQ</a></li>
+        <li><a href="../about/index.html">About</a></li>
+      </ul>
     </nav>
   </div>
 </header>
 
- <!--Main section starts-->
+<!--Main section starts-->
 
 <main class="faq">
-    <div class="content-wrapper">
-      <h2>Frequently Asked Questions</h2>
-      <div class="faq-content">
-          <h4>How do I get to the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>  
-        </div>
-        <div class="faq-content">
-          <h4>What kind of team is right for the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>  
-        </div>
-        <div class="faq-content">
-          <h4>What size teams can you accommodate?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>  
-        </div>
-        <div class="faq-content">
-          <h4>Is there really no wifi available?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  </p>   
-      </div>
+  <div class="content-wrapper">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faq-content">
+      <h4>How do I get to the Unplugged retreat?</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
     </div>
+    <div class="faq-content">
+      <h4>What kind of team is right for the Unplugged retreat?</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+    </div>
+    <div class="faq-content">
+      <h4>What size teams can you accommodate?</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+    </div>
+    <div class="faq-content">
+      <h4>Is there really no wifi available?</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+    </div>
+  </div>
 </main>
 
- <!--Main section ends-->
+<!--Main section ends-->
 
 <footer>
   <div class="content-wrapper">
@@ -85,7 +89,7 @@
           <p><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></p></a>
           <p><a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></p></a>
           <p><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></p></a>
-      <!-- other social links here -->
+          <!-- other social links here -->
         </div>
       </div>
     </div>
@@ -95,17 +99,17 @@
   </div>
 </footer>
 
-  <!-- Add your site or application content here -->
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+<!-- Add your site or application content here -->
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
